fix alignment issues, replaced entire slate docs

--- a/docs/source/stylesheets/_variables.scss
+++ b/docs/source/stylesheets/_variables.scss
@@ -83,9 +83,7 @@ $phone-width: $tablet-width - $nav-width; // min width before reverting to mobil
   line-height: 1.5;
 }
 
-%h3, pretty-print {
-  font-size:66px;
-}
+
 
 
 // OTHER
